--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Working with SASS and Modules</title>
     <!--This has to be a css file-->
+    <!--You can't link a SASS file!-->
     <link rel="stylesheet" href="css/master.css">
 </head>
 <body>
