--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   
     <!--Templates go here-->
 
-    <template id="profs-template">
+    <template id="user-template">
         <div class="user">
             <h1 class="hidden"></h1>
             <h2 class="user-name"></h2>
