--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <template id="user-template">
         <div class="user">
             <h1 class="hidden"></h1>
+            <img src="" alt="ProfImg">
             <h2 class="user-name"></h2>
             <p class="user-nickname"></p>
             <p class="user-role"></p>
